# AIO-IDE

./: .editorconfig  .gitattributes  CMakeLists.txt  Config.h  MainUI.cpp  ThemeConfig.h  ai_engine.h  aichat.h  aichat_connector.cpp  build_instructions.txt  cmakelists.txt  compiler_core.h  config.h  final_main_logic.cpp  imconfig.h  imgui.cpp  imgui.h  imgui.tables.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_metal.mm  imgui_impl_null.cpp  imgui_impl_null.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_osx.h  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlgpu3.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imgui_impl_vulkan.cpp  (+20 more)
.github/workflows/: build.yml
github/workflows/: build.yml
imgui/: AIChat.h  AIChat_Connector.cpp  Final_Main_logic.cpp  app_icon.ico.txt  requirements.txt  resource.rc
imgui/docs /: CHANGELOG.txt  CONTRIBUTING.md  EXAMPLES.md  FAQ.md
